lib/bindings/quiche_bindings.g.dart


  _dart_quiche_conn_timeout_as_nanos _quiche_conn_timeout_as_nanos;

  int quiche_conn_timeout_as_millis(
    ffi.Pointer<Connection> conn,
  ) {
    _quiche_conn_timeout_as_millis ??= _dylib.lookupFunction<
        _c_quiche_conn_timeout_as_millis,
        _dart_quiche_conn_timeout_as_millis>('quiche_conn_timeout_as_millis');
    return _quiche_conn_timeout_as_millis(
      conn,
    );
  }

  _dart_quiche_conn_timeout_as_millis _quiche_conn_timeout_as_millis;

  void quiche_conn_on_timeout(
    ffi.Pointer<Connection> conn,
  ) {
    _quiche_conn_on_timeout ??= _dylib.lookupFunction<_c_quiche_conn_on_timeout,
        _dart_quiche_conn_on_timeout>('quiche_conn_on_timeout');
    return _quiche_conn_on_timeout(
      conn,
    );
  }

  _dart_quiche_conn_on_timeout _quiche_conn_on_timeout;

  int quiche_conn_close(
    ffi.Pointer<Connection> conn,
    bool app,
    int err,
    ffi.Pointer<ffi.Uint8> reason,
    int reason_len,
  ) {
    _quiche_conn_close ??=
        _dylib.lookupFunction<_c_quiche_conn_close, _dart_quiche_conn_close>(
            'quiche_conn_close');
    return _quiche_conn_close(
      conn,
      app ? 1 : 0,
      err,
      reason,
      reason_len,
    );
  }

  _dart_quiche_conn_close _quiche_conn_close;

  void quiche_conn_application_proto(
    ffi.Pointer<Connection> conn,
    ffi.Pointer<ffi.Pointer<ffi.Uint8>> out,
    ffi.Pointer<ffi.Uint64> out_len,
  ) {
    _quiche_conn_application_proto ??= _dylib.lookupFunction<
        _c_quiche_conn_application_proto,
        _dart_quiche_conn_application_proto>('quiche_conn_application_proto');
    return _quiche_conn_application_proto(
      conn,
      out,
      out_len,
    );
  }

  _dart_quiche_conn_application_proto _quiche_conn_application_proto;

  bool quiche_conn_is_established(
    ffi.Pointer<Connection> conn,
  ) {
    _quiche_conn_is_established ??= _dylib.lookupFunction<
        _c_quiche_conn_is_established,
        _dart_quiche_conn_is_established>('quiche_conn_is_established');
    return _quiche_conn_is_established(
          conn,
        ) !=
        0;
  }

  _dart_quiche_conn_is_established _quiche_conn_is_established;

  bool quiche_conn_is_in_early_data(
    ffi.Pointer<Connection> conn,
  ) {
    _quiche_conn_is_in_early_data ??= _dylib.lookupFunction<
        _c_quiche_conn_is_in_early_data,
        _dart_quiche_conn_is_in_early_data>('quiche_conn_is_in_early_data');
    return _quiche_conn_is_in_early_data(
          conn,
        ) !=
        0;
  }

  _dart_quiche_conn_is_in_early_data _quiche_conn_is_in_early_data;

  bool quiche_conn_is_closed(
    ffi.Pointer<Connection> conn,
  ) {
    _quiche_conn_is_closed ??= _dylib.lookupFunction<_c_quiche_conn_is_closed,
        _dart_quiche_conn_is_closed>('quiche_conn_is_closed');
    return _quiche_conn_is_closed(
          conn,
        ) !=
        0;
  }

  _dart_quiche_conn_is_closed _quiche_conn_is_closed;

  int quiche_conn_stream_init_application_data(
    ffi.Pointer<Connection> conn,
    int stream_id,
    ffi.Pointer<ffi.Void> data,
  ) {
    _quiche_conn_stream_init_application_data ??= _dylib.lookupFunction<
            _c_quiche_conn_stream_init_application_data,
            _dart_quiche_conn_stream_init_application_data>(
        'quiche_conn_stream_init_application_data');
    return _quiche_conn_stream_init_application_data(
      conn,
      stream_id,
      data,
    );
  }

  _dart_quiche_conn_stream_init_application_data
      _quiche_conn_stream_init_application_data;

  ffi.Pointer<ffi.Void> quiche_conn_stream_application_data(
    ffi.Pointer<Connection> conn,
    int stream_id,
  ) {
    _quiche_conn_stream_application_data ??= _dylib.lookupFunction<
            _c_quiche_conn_stream_application_data,
            _dart_quiche_conn_stream_application_data>(
        'quiche_conn_stream_application_data');
    return _quiche_conn_stream_application_data(
      conn,
      stream_id,
    );
  }

  _dart_quiche_conn_stream_application_data
      _quiche_conn_stream_application_data;

  bool quiche_stream_iter_next(
    ffi.Pointer<StreamIter> iter,
    ffi.Pointer<ffi.Uint64> stream_id,
  ) {
    _quiche_stream_iter_next ??= _dylib.lookupFunction<
        _c_quiche_stream_iter_next,
        _dart_quiche_stream_iter_next>('quiche_stream_iter_next');
    return _quiche_stream_iter_next(
          iter,
          stream_id,
        ) !=
        0;
  }

  _dart_quiche_stream_iter_next _quiche_stream_iter_next;

  void quiche_stream_iter_free(
    ffi.Pointer<StreamIter> iter,
  ) {
    _quiche_stream_iter_free ??= _dylib.lookupFunction<
        _c_quiche_stream_iter_free,
        _dart_quiche_stream_iter_free>('quiche_stream_iter_free');
    return _quiche_stream_iter_free(
      iter,
    );
  }

  _dart_quiche_stream_iter_free _quiche_stream_iter_free;

  void quiche_conn_stats(
    ffi.Pointer<Connection> conn,
    ffi.Pointer<quiche_stats> out,
  ) {
    _quiche_conn_stats ??=
        _dylib.lookupFunction<_c_quiche_conn_stats, _dart_quiche_conn_stats>(
            'quiche_conn_stats');
    return _quiche_conn_stats(
      conn,
      out,
    );
  }

  _dart_quiche_conn_stats _quiche_conn_stats;

  void quiche_conn_free(
    ffi.Pointer<Connection> conn,
  ) {
    _quiche_conn_free ??=
        _dylib.lookupFunction<_c_quiche_conn_free, _dart_quiche_conn_free>(
            'quiche_conn_free');
    return _quiche_conn_free(
      conn,
    );
  }

  _dart_quiche_conn_free _quiche_conn_free;

  ffi.Pointer<Http3Config> quiche_h3_config_new() {
    _quiche_h3_config_new ??= _dylib.lookupFunction<_c_quiche_h3_config_new,
        _dart_quiche_h3_config_new>('quiche_h3_config_new');
    return _quiche_h3_config_new();
  }

  _dart_quiche_h3_config_new _quiche_h3_config_new;

  void quiche_h3_config_set_max_header_list_size(
    ffi.Pointer<Http3Config> config,
    int v,
  ) {
    _quiche_h3_config_set_max_header_list_size ??= _dylib.lookupFunction<
            _c_quiche_h3_config_set_max_header_list_size,
            _dart_quiche_h3_config_set_max_header_list_size>(
        'quiche_h3_config_set_max_header_list_size');
    return _quiche_h3_config_set_max_header_list_size(
      config,
      v,
    );
  }

  _dart_quiche_h3_config_set_max_header_list_size
      _quiche_h3_config_set_max_header_list_size;

  void quiche_h3_config_set_qpack_max_table_capacity(
    ffi.Pointer<Http3Config> config,
    int v,
  ) {
    _quiche_h3_config_set_qpack_max_table_capacity ??= _dylib.lookupFunction<
            _c_quiche_h3_config_set_qpack_max_table_capacity,
            _dart_quiche_h3_config_set_qpack_max_table_capacity>(
        'quiche_h3_config_set_qpack_max_table_capacity');
    return _quiche_h3_config_set_qpack_max_table_capacity(
      config,
      v,
    );
  }

  _dart_quiche_h3_config_set_qpack_max_table_capacity
      _quiche_h3_config_set_qpack_max_table_capacity;

  void quiche_h3_config_set_qpack_blocked_streams(
    ffi.Pointer<Http3Config> config,
    int v,
  ) {
    _quiche_h3_config_set_qpack_blocked_streams ??= _dylib.lookupFunction<
            _c_quiche_h3_config_set_qpack_blocked_streams,
            _dart_quiche_h3_config_set_qpack_blocked_streams>(
        'quiche_h3_config_set_qpack_blocked_streams');
    return _quiche_h3_config_set_qpack_blocked_streams(
      config,
      v,
    );
  }

  _dart_quiche_h3_config_set_qpack_blocked_streams
      _quiche_h3_config_set_qpack_blocked_streams;

  void quiche_h3_config_free(
    ffi.Pointer<Http3Config> config,
  ) {
    _quiche_h3_config_free ??= _dylib.lookupFunction<_c_quiche_h3_config_free,
        _dart_quiche_h3_config_free>('quiche_h3_config_free');
    return _quiche_h3_config_free(
      config,
    );
  }

  _dart_quiche_h3_config_free _quiche_h3_config_free;

  ffi.Pointer<Http3Connection> quiche_h3_accept(
    ffi.Pointer<Connection> quiche_conn,
    ffi.Pointer<Http3Config> config,
  ) {
    _quiche_h3_accept ??=
        _dylib.lookupFunction<_c_quiche_h3_accept, _dart_quiche_h3_accept>(
            'quiche_h3_accept');
    return _quiche_h3_accept(
      quiche_conn,
      config,
    );
  }

  _dart_quiche_h3_accept _quiche_h3_accept;

  ffi.Pointer<Http3Connection> quiche_h3_conn_new_with_transport(
    ffi.Pointer<Connection> quiche_conn,
    ffi.Pointer<Http3Config> config,
  ) {
    _quiche_h3_conn_new_with_transport ??= _dylib.lookupFunction<
            _c_quiche_h3_conn_new_with_transport,
            _dart_quiche_h3_conn_new_with_transport>(
        'quiche_h3_conn_new_with_transport');
    return _quiche_h3_conn_new_with_transport(
      quiche_conn,
      config,
    );
  }

  _dart_quiche_h3_conn_new_with_transport _quiche_h3_conn_new_with_transport;

  int quiche_h3_conn_poll(
    ffi.Pointer<Http3Connection> conn,
    ffi.Pointer<Connection> quic_conn,
    ffi.Pointer<ffi.Pointer<Http3Event>> ev,
  ) {
    _quiche_h3_conn_poll ??= _dylib.lookupFunction<_c_quiche_h3_conn_poll,
        _dart_quiche_h3_conn_poll>('quiche_h3_conn_poll');
    return _quiche_h3_conn_poll(
      conn,
      quic_conn,
      ev,
    );
  }

  _dart_quiche_h3_conn_poll _quiche_h3_conn_poll;

  int quiche_h3_event_type(
    ffi.Pointer<Http3Event> ev,
  ) {
    _quiche_h3_event_type ??= _dylib.lookupFunction<_c_quiche_h3_event_type,
        _dart_quiche_h3_event_type>('quiche_h3_event_type');
    return _quiche_h3_event_type(
      ev,
    );
  }

  _dart_quiche_h3_event_type _quiche_h3_event_type;

  int quiche_h3_event_for_each_header(
    ffi.Pointer<Http3Event> ev,
    ffi.Pointer<ffi.NativeFunction<_typedefC_2>> cb,
    ffi.Pointer<ffi.Void> argp,
  ) {
    _quiche_h3_event_for_each_header ??= _dylib.lookupFunction<
            _c_quiche_h3_event_for_each_header,
            _dart_quiche_h3_event_for_each_header>(
        'quiche_h3_event_for_each_header');
    return _quiche_h3_event_for_each_header(
      ev,
      cb,
      argp,
    );
  }

  _dart_quiche_h3_event_for_each_header _quiche_h3_event_for_each_header;

  bool quiche_h3_event_headers_has_body(
    ffi.Pointer<Http3Event> ev,
  ) {
    _quiche_h3_event_headers_has_body ??= _dylib.lookupFunction<
            _c_quiche_h3_event_headers_has_body,
            _dart_quiche_h3_event_headers_has_body>(
        'quiche_h3_event_headers_has_body');
    return _quiche_h3_event_headers_has_body(
          ev,
        ) !=
        0;
  }

  _dart_quiche_h3_event_headers_has_body _quiche_h3_event_headers_has_body;

  void quiche_h3_event_free(
    ffi.Pointer<Http3Event> ev,
  ) {
    _quiche_h3_event_free ??= _dylib.lookupFunction<_c_quiche_h3_event_free,
        _dart_quiche_h3_event_free>('quiche_h3_event_free');
    return _quiche_h3_event_free(
      ev,
    );
  }

  _dart_quiche_h3_event_free _quiche_h3_event_free;

  int quiche_h3_send_request(
    ffi.Pointer<Http3Connection> conn,
    ffi.Pointer<Connection> quic_conn,
    ffi.Pointer<quiche_h3_header> headers,
    int headers_len,
    bool fin,
  ) {
    _quiche_h3_send_request ??= _dylib.lookupFunction<_c_quiche_h3_send_request,
        _dart_quiche_h3_send_request>('quiche_h3_send_request');
    return _quiche_h3_send_request(
      conn,
      quic_conn,
      headers,
      headers_len,
      fin ? 1 : 0,
    );
  }

  _dart_quiche_h3_send_request _quiche_h3_send_request;

  int quiche_h3_send_response(
    ffi.Pointer<Http3Connection> conn,
    ffi.Pointer<Connection> quic_conn,
    int stream_id,
    ffi.Pointer<quiche_h3_header> headers,
    int headers_len,
    bool fin,
  ) {
    _quiche_h3_send_response ??= _dylib.lookupFunction<
        _c_quiche_h3_send_response,
        _dart_quiche_h3_send_response>('quiche_h3_send_response');
    return _quiche_h3_send_response(
      conn,
      quic_conn,
      stream_id,
      headers,
      headers_len,
      fin ? 1 : 0,
    );
  }

  _dart_quiche_h3_send_response _quiche_h3_send_response;
